refactor: rename Transicoes to Transicao and update related logic in AFD and AFND classes